--- a/index.html
+++ b/index.html
@@ -5,66 +5,131 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal Page">
+    <meta name="author" content="Josep Carner Marsal">
 
-    <title> Josep Carner Marsal </title>
+    <title> Josep Carner Marsal - Personal Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
-    <link href="css/coming-soon.min.css" rel="stylesheet">
+    <link href="css/portfolio-item.css" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendor/academic-icons/css/academicons.css"/>
+
 
   </head>
 
   <body>
 
-    <div class="overlay"></div>
-
-    <div class="masthead">
-      <div class="masthead-bg"></div>
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-12 my-auto">
-            <div class="masthead-content text-white py-5 py-md-0">
-              <h1 class="mb-3">Coming Soon!</h1>
-              <p class="mb-5"> In the meanwhile, you can check my Linkedin or Github profiles. </p>
-            </div>
-          </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
+      <div class="container">
+        <img class="circle" width='40%' src="img/josepcarner.png" alt="">
+        <!--<a class="navbar-brand" style="font-size:46px; color:white; font-weight:50;">Josep Carner Marsal</a>-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="docs/CV.pdf" target="_blank"> CV </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="research.html"> Research </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="media.html"> Media </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="https://medium.com/@josepcarnerm/latest"> Blog </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mailto:jcm807@nyu.edu"> Contact</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
+    </nav>
 
-    <div class="social-icons">
-      <ul class="list-unstyled text-center mb-0">
-        <li class="list-unstyled-item">
-          <a href="https://www.linkedin.com/in/josepcarnerm/">
-            <i class="fa fa-linkedin"></i>
-          </a>
-        </li>
-        <li class="list-unstyled-item">
-          <a href="https://github.com/josepcarnerm">
-            <i class="fa fa-github"></i>
-          </a>
-        </li>
-      </ul>
+    <!-- Page Content -->
+    <div class="container pt-5" >
+
+      <!-- Portfolio Item Row -->
+      <div class="mt-5 row" >
+
+        <div class="col-md-6 text-center">
+          <img class="circle" width="60%" src="img/profile.png" alt="">
+          <div class="text-center py-4">
+            <a href="https://www.linkedin.com/in/josepcarnerm/" target="_blank">
+              <i class="fa fa-linkedin fa-2x mx-1 text-danger"></i>
+            </a>
+            <a href="https://github.com/josepcarnerm" target="_blank">
+              <i class="fa fa-github fa-2x mx-1 text-danger"></i>
+            </a>
+            <a href="https://medium.com/@josepcarnerm" target="_blank">
+              <i class="fa fa-medium fa-2x mx-1 text-danger"></i>
+            </a>
+            <!--<a href="#" target="_blank">-->
+              <!--<i class="ai ai-google-scholar ai-2x mx-1 text-danger"></i>-->
+            <!--</a>-->
+          </div>
+        </div>
+
+        <div class="col-md-6 lead mt-2" style="font-weight:200;">
+          <h1> About Me </h1>
+            <p>
+            I am a graduate Computer Science student at <a target="_blank" href="https://www.nyu.edu" class="text-danger">New York University</a>,
+            under the supervision of <a target="_blank" href="http://yann.lecun.com" class="text-danger"> Yann LeCun </a>,
+            currently holding a <a target="_blank" href="https://obrasociallacaixa.org/en/investigacion-y-becas/programa-de-becas-de-posgrado/estudios-de-posgrado-en-america-del-norte-y-asia-pacifico/descripcion-del-programa" class="text-danger"> Fellowship from La Caixa</a>.
+            My primary research interests are Deep Learning and Computer Vision, and my current research focus is in
+              Deep Generative Models and sequence-to-sequence models for video.
+            </p>
+            <p>
+            This summer I will intern at  <a target="_blank" href="https://research.google.com" class="text-danger"> Google</a> as a Research Software Developer,
+            where I will be working in the Mobile Vision team.
+            </p>
+            <p>
+            Previously, I graduated in both Computer Science and Electrical Engineering, and spent one fantastic year
+              working as a Machine Learning engineer in <a target="_blank" href="https://www.skyscanner.net" class="text-danger"> Skyscanner</a>.
+            </p>
+            <p>
+            I have a strong passion for Artificial Intelligence and spend my free time building stuff and training Machine
+              Learning models. I am also passionated about Entrepreneurship and Startups, and always keep an eye on the
+              social impact and bussiness side of AI. The two readings I have ever enjoyed the most, and that probably quite define
+              myself are <a target="_blank" style="font-style: italic;" href="https://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296" class="text-danger">From Zero To One</a> and
+              <a target="_blank" style="font-style: italic;" href="https://www.amazon.com/casa-los-esp%C3%ADritus-Spanish-ebook/dp/B00H4H1H2M/ref=sr_1_1?s=books&ie=UTF8&qid=1515444989&sr=1-1&keywords=la+casa+de+los+espiritus" class="text-danger">
+                La Casa de los espíritus.</a>
+            </p>
+        </div>
+
+      </div>
+      <!-- /.row -->
+
     </div>
+    <!-- /.container -->
+
+    <!-- Vertical pace -->
+    <h1 class="py-5"></h1>
+    <!-- /.Vertical space -->
+
+    <!-- Footer -->
+    <footer class="py-4 bg-danger fixed-bottom">
+      <div class="container">
+        <p class="m-0 text-center text-white lead" style="font-size:14px; font-weight:100;"> Copyright &copy; Josep Carner Marsal 2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/vide/jquery.vide.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/coming-soon.min.js"></script>
 
   </body>
 
